--- a/Thasniya_Mansoora_Team_Notebook_Playstore_App_Review_Analysis.ipynb
+++ b/Thasniya_Mansoora_Team_Notebook_Playstore_App_Review_Analysis.ipynb
@@ -101,14 +101,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "0bJ-6BMML2yP",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 309
+          "height": 243
         },
-        "outputId": "08945d6d-f379-4b3f-b046-49c24d171d81"
+        "outputId": "3113eb14-4f10-42e7-80f4-4bef7198bb7f"
       },
       "outputs": [
         {
@@ -259,7 +259,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 3
         }
       ],
       "source": [
@@ -291,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKiogcuiYh6j",
-        "outputId": "a7e87ac4-839f-462d-d65a-21a06096754e"
+        "outputId": "ca12329d-fee9-4bef-a135-8bcaa9b3f127"
       },
       "execution_count": null,
       "outputs": [
@@ -308,13 +308,13 @@
       "cell_type": "code",
       "source": [
         "#connect two dataset and store it in variable b_df & c_df\n",
-        "b_df=pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/Play Store App Review Analysis/Play Store Data.csv\")\n",
-        "c_df=pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/Play Store App Review Analysis/User Reviews.csv\")"
+        "b_df=pd.read_csv(\"/content/drive/MyDrive/Almabetter/capstone project/EDA/Play Store Data.csv\")\n",
+        "c_df=pd.read_csv(\"/content/drive/MyDrive/Almabetter/capstone project/EDA/User Reviews.csv\")"
       ],
       "metadata": {
         "id": "NB0MosqQZKZb"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
